--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@material/button": "^0.39.1",
+    "@material/ripple": "^0.39.1",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
@@ -28,6 +30,7 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.3.2",
+    "ember-cli-sass": "^9.0.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
@@ -35,12 +38,15 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-paper": "^1.0.0-beta.8",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.3.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3",
-    "qunit-dom": "^0.6.2"
+    "materialize-css": "^1.0.0-rc.2",
+    "qunit-dom": "^0.6.2",
+    "sass": "^1.13.1"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
